- add: Gif support

--- a/Content.Client/Lobby/UI/LobbyGui.xaml
+++ b/Content.Client/Lobby/UI/LobbyGui.xaml
@@ -6,12 +6,12 @@
                   xmlns:lobbyUi="clr-namespace:Content.Client.Lobby.UI"
                   xmlns:info="clr-namespace:Content.Client.Info"
                   xmlns:widgets="clr-namespace:Content.Client.UserInterface.Systems.Chat.Widgets"
-                  xmlns:ui="clr-namespace:Content.Client._Ohio.UI"
+                  xmlns:ui="clr-namespace:Content.Client._Amour.Gif.UI"
                   xmlns:buttons="clr-namespace:Content.Client._Ohio.Buttons">
 
     <!-- Background -->
-    <ui:AnimatedBackgroundControl Access="Public" Name="Background" VerticalExpand="True" HorizontalExpand="True"
-                                  Stretch="KeepAspectCovered" />
+    <ui:GifRect Access="Public" VerticalExpand="True" Name="Background" HorizontalExpand="True"
+                 Stretch="KeepAspectCovered"/>
 
     <!-- Main Container -->
     <BoxContainer Name="MainContainer" VerticalExpand="True" HorizontalExpand="True" Orientation="Horizontal"
