--- a/Content.Client/_White/InteractiveBoard/UI/InteractiveBoardWindow.xaml
+++ b/Content.Client/_White/InteractiveBoard/UI/InteractiveBoardWindow.xaml
@@ -4,11 +4,9 @@
     MouseFilter="Stop" MinSize="500 500"
     SetSize="600 650">
     <BoxContainer Name="ContentsRoot" Orientation="Vertical">
-        <PanelContainer StyleClasses="AngleRect" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="6">
-            <TextureButton Name="CloseButton" StyleClasses="windowCloseButton"/>
-        </PanelContainer>
-        <PanelContainer StyleClasses="AngleRect" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="6">
-            <Button Name="CopyButton" Text="Копировать текст" StyleClasses="windowCopyButton"/>
+        <PanelContainer StyleClasses="AngleRect" VerticalAlignment="Top">
+            <TextureButton Name="CloseButton" StyleClasses="windowCloseButton" HorizontalAlignment="Right"/>
+            <Button Name="CopyButton" Text="Копировать текст" StyleClasses="windowCopyButton" HorizontalAlignment="Left"/>
         </PanelContainer>
         <PanelContainer Name="Background" StyleClasses="DefaultBorder" VerticalExpand="True" HorizontalExpand="True">
             <ScrollContainer Name="ScrollingContents" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalExpand="True" VerticalExpand="True" HScrollEnabled="False">
@@ -17,7 +15,7 @@
                         <TextureButton Name="HeaderImage" HorizontalAlignment="Center" VerticalAlignment="Top" MouseFilter="Ignore"/>
                         <Control Name="TextAlignmentPadding" VerticalAlignment="Top"/>
                         <RichTextLabel Name="BlankIndicator" StyleClasses="LabelSecondaryColor" VerticalAlignment="Top" HorizontalAlignment="Center"/>
-                        <RichTextLabel StyleClasses="WrittenText" Name="WrittenTextLabel" VerticalAlignment="Stretch" HorizontalExpand="True"/>
+                        <RichTextLabel StyleClasses="WrittenText" Name="WrittenTextLabel" VerticalAlignment="Stretch" Margin="4" HorizontalExpand="True"/>
                         <PanelContainer Name="InputContainer" StyleClasses="TransparentBorderedWindowPanel" MinHeight="100"
                                         VerticalAlignment="Stretch" VerticalExpand="True" HorizontalExpand="True">
                             <TextEdit Name="Input" StyleClasses="LineEdit" Access="Public" />
