--- a/Content.Client/UserInterface/Systems/Character/Windows/CharacterWindow.xaml
+++ b/Content.Client/UserInterface/Systems/Character/Windows/CharacterWindow.xaml
@@ -25,6 +25,9 @@
             <Label Text="Статы:" HorizontalAlignment="Center" />
             <RichTextLabel Name="StatsLabel" Access="Public" HorizontalAlignment="Left" HorizontalExpand="True"/>
 
+            <Label Text="Скиллы:" HorizontalAlignment="Center" />
+            <RichTextLabel Name="SkillsLabel" Access="Public" HorizontalAlignment="Left" HorizontalExpand="True"/>
+
             <Label Name="ObjectivesLabel" Access="Public" Text="Цели:"
                    HorizontalAlignment="Center" />
             <BoxContainer Orientation="Vertical" Name="Objectives" Access="Public" />
