--- a/Content.Client/Access/UI/IdCardConsoleWindow.xaml
+++ b/Content.Client/Access/UI/IdCardConsoleWindow.xaml
@@ -35,7 +35,7 @@
         <GridContainer Name="CurrentJobIcon" Columns="2">
             <Label Text="Текущая выбранная иконка для роли: " />
         </GridContainer>
-        <GridContainer Name="JobIconsGrid" Columns="10" HorizontalAlignment="Center">
+        <GridContainer Name="JobIconsGrid" HorizontalAlignment="Center">
             <!-- Job icon buttons are generated in the code -->
         </GridContainer>
         <!-- WD EDIT END -->
