--- a/Content.Client/UserInterface/Systems/Ghost/Controls/GhostTargetWindow.xaml
+++ b/Content.Client/UserInterface/Systems/Ghost/Controls/GhostTargetWindow.xaml
@@ -1,9 +1,9 @@
 <DefaultWindow xmlns="https://spacestation14.io" Title="{Loc 'ghost-target-window-title'}" MinSize="950 550" SetSize="950 550">
     <BoxContainer Orientation="Vertical" HorizontalExpand="True" SizeFlagsStretchRatio="0.4">
         <ScrollContainer VerticalExpand="True" HorizontalExpand="True" HScrollEnabled="False">
-            <GridContainer Name="GhostTeleportContainter">
+            <BoxContainer Name="GhostTeleportContainter" Orientation="Vertical">
                 <!-- Target buttons get added here by code -->
-            </GridContainer>
+            </BoxContainer>
         </ScrollContainer>
     </BoxContainer>
 </DefaultWindow>
