Tweak: В волшебном зеркале теперь можно менять черты внешности

--- a/Content.Client/_White/Wizard/Mirror/WizardMirrorWindow.xaml
+++ b/Content.Client/_White/Wizard/Mirror/WizardMirrorWindow.xaml
@@ -80,6 +80,12 @@
                     <humanoid:SingleMarkingPicker Name="CFacialHairPicker" Category="FacialHair" />
                 </BoxContainer>
             </prefUi:HighlightedContainer>
+            <!-- Markings -->
+            <prefUi:HighlightedContainer>
+                <BoxContainer Name="CMarkingsTab" Orientation="Vertical" Margin="10">
+                        <humanoid:MarkingPicker Name="CMarkings" IgnoreCategories="Hair,FacialHair" />
+                </BoxContainer>
+            </prefUi:HighlightedContainer>
         </BoxContainer>
     </ScrollContainer>
 </DefaultWindow>
