--- a/Content.Client/Lathe/UI/RecipeControl.xaml
+++ b/Content.Client/Lathe/UI/RecipeControl.xaml
@@ -5,15 +5,11 @@
         Margin="0"
         StyleClasses="ButtonSquare">
         <BoxContainer Orientation="Horizontal">
-            <LayeredTextureRect
-                Name="RecipeTextures"
+            <TextureRect
+                Name="RecipeTexture"
                 Margin="0 0 4 0"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Stretch="KeepAspectCentered"
                 MinSize="32 32"
-                CanShrink="true"
-                />
+                Stretch="KeepAspectCentered" />
             <Label Name="RecipeName" HorizontalExpand="True" />
         </BoxContainer>
     </Button>
