--- a/Content.Client/Options/UI/Tabs/AdminSettingsTab.xaml
+++ b/Content.Client/Options/UI/Tabs/AdminSettingsTab.xaml
@@ -21,7 +21,7 @@
             </BoxContainer>
     </BoxContainer>
         <BoxContainer Orientation="Vertical" >
-        <controls:StripeBack HasBottomEdge="False" HasMargins="False">
+        <controls:StripeBack HasTopEdge="False" HasBottomEdge="False" HasMargins="False">
             <BoxContainer Orientation="Horizontal"
                           Align="End"
                           HorizontalExpand="True"
