--- a/Content.Client/Lobby/UI/LobbyGui.xaml
+++ b/Content.Client/Lobby/UI/LobbyGui.xaml
@@ -58,9 +58,33 @@
                                           VerticalAlignment="Center" Margin="0 0 0 420" />
 
                     <!-- Left Bot Panel -->
-                    <BoxContainer Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Bottom">
-                       <PanelContainer StyleClasses="AngleRect">
-                            <RichTextLabel Name="LobbySong" Access="Public" HorizontalAlignment="Center" />
+                    <BoxContainer Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+                        <PanelContainer MinWidth="500" Name="InfoPanel" StyleClasses="LobbyGayBackground" HorizontalAlignment="Right"
+                                        VerticalExpand="True" VerticalAlignment="Stretch">
+                            <BoxContainer Orientation="Vertical">
+                                <!-- Header -->
+                                <BoxContainer Orientation="Horizontal" MinSize="0 40" Name="HeaderContainer" Access="Public"
+                                              SeparationOverride="4">
+                                    <Label Name="ServerName" Access="Public" StyleClasses="LabelHeadingBigger" VAlign="Center"
+                                           HorizontalExpand="True" HorizontalAlignment="Center" />
+                                </BoxContainer>
+                                <!-- Just Line -->
+                                <controls:HLine Color="{x:Static style:StyleNano.NanoLine}" Thickness="1" Access="Public" />
+                                <!-- Server Info -->
+                                <info:ServerInfo Name="ServerInfo" Access="Public" MinSize="0 100" VerticalExpand="false"
+                                                 Margin="3" MaxWidth="600" HorizontalAlignment="Left" />
+
+                                <Label Name="StationTime" Access="Public"
+                                       FontColorOverride="{x:Static maths:Color.MediumVioletRed}" Margin="3"
+                                       HorizontalAlignment="Left" />
+
+                                <Label Name="StartTime" Access="Public" FontColorOverride="{x:Static maths:Color.MediumVioletRed}"
+                                       Margin="3" StyleClasses="Label" HorizontalExpand="True" />
+
+                                <PanelContainer StyleClasses="AngleRect">
+                                    <RichTextLabel Name="LobbySong" Access="Public" HorizontalAlignment="Center" />
+                                </PanelContainer>
+                            </BoxContainer>
                         </PanelContainer>
                     </BoxContainer>
 
@@ -87,7 +111,7 @@
                             <buttons:OhioLobbyTextButton
                                 Name="CharacterSetupButton"
                                 Access="Public"
-                                ButtonText="Настройка персонажа"
+                                ButtonText="Персонаж"
                                 Margin="0 7 0 7" />
 
                             <buttons:OhioLobbyTextButton
@@ -143,44 +167,9 @@
 
                 <BoxContainer Orientation="Vertical" HorizontalExpand="True">
 
-                    <!-- Header -->
-                    <BoxContainer Orientation="Horizontal" MinSize="0 40" Name="HeaderContainer" Access="Public"
-                                  SeparationOverride="4">
-                        <Label Name="ServerName" Access="Public" StyleClasses="LabelHeadingBigger" VAlign="Center"
-                               HorizontalExpand="True" HorizontalAlignment="Center" />
-                    </BoxContainer>
-
-                    <!-- Gold Line -->
-                    <controls:HLine Color="{x:Static style:StyleNano.NanoGold}" Thickness="2" />
-                    <controls:HSpacer Spacing="10" />
-
-                    <!-- Server Info -->
-                    <controls:NanoHeading Text="{Loc 'ui-lobby-server-info-block'}" />
-
-                    <info:ServerInfo Name="ServerInfo" Access="Public" MinSize="0 100" VerticalExpand="false"
-                                     Margin="3" MaxWidth="400" HorizontalAlignment="Left" />
-
-                    <Label Name="StationTime" Access="Public"
-                           FontColorOverride="{x:Static maths:Color.MediumVioletRed}" Margin="3"
-                           HorizontalAlignment="Left" />
-
-                    <Label Name="StartTime" Access="Public" FontColorOverride="{x:Static maths:Color.MediumVioletRed}"
-                           Margin="3" StyleClasses="Label" HorizontalExpand="True" />
-
-                    <controls:HSpacer Spacing="5" />
-
                     <!--
                     <lobbyUi:LobbyCharacterPreviewPanel Name="CharacterPreview" Access="Public"/>
                     -->
-
-                    <controls:HSpacer Spacing="5" />
-
-                    <BoxContainer MinHeight="10" />
-
-                    <!-- Gold Line -->
-                    <controls:HLine Color="{x:Static style:StyleNano.NanoGold}" Thickness="2" Access="Public" />
-
-                    <controls:HSpacer Spacing="10" />
 
                     <widgets:ChatBox Name="Chat" Access="Public" VerticalExpand="True" Margin="3" MinHeight="50" />
 
