--- a/Content.Client/Options/UI/Tabs/KeyRebindTab.xaml
+++ b/Content.Client/Options/UI/Tabs/KeyRebindTab.xaml
@@ -8,7 +8,7 @@
 
             </BoxContainer>
         </ScrollContainer>
-        <controls:StripeBack HasBottomEdge="False" HasMargins="False">
+        <controls:StripeBack HasTopEdge="False" HasBottomEdge="False" HasMargins="False">
             <BoxContainer Orientation="Horizontal" Margin="8 8">
                 <Control MinSize="8 0" />
                 <Label Text="{Loc 'ui-options-binds-explanation'}" StyleClasses="LabelSubText" />
