--- a/Content.Client/Options/UI/Tabs/NetworkTab.xaml
+++ b/Content.Client/Options/UI/Tabs/NetworkTab.xaml
@@ -77,7 +77,7 @@
                 <Control MinSize="4 0"/>
             </BoxContainer>
         </BoxContainer>
-        <controls:StripeBack HasBottomEdge="False" HasMargins="False">
+        <controls:StripeBack HasTopEdge="False" HasBottomEdge="False" HasMargins="False">
             <BoxContainer Orientation="Horizontal"
                           Align="End"
                           HorizontalExpand="True"
